--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -40,9 +40,11 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/non_authorized_layout"
-            android:layout_width="@dimen/_277sdp"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_135sdp"
             android:background="@color/gray_background"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginEnd="@dimen/_12sdp"
             android:layout_marginTop="@dimen/_25sdp"
             app:layout_constraintTop_toBottomOf="@id/user_title"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,13 +75,15 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/enter_button"
-                android:layout_width="@dimen/_230sdp"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/_40sdp"
                 android:background="@drawable/ic_button_layout"
                 android:text="@string/enter_button"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13sdp"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
