--- a/app/src/main/res/layout/fragment_search_trip.xml
+++ b/app/src/main/res/layout/fragment_search_trip.xml
@@ -26,7 +26,7 @@
             android:id="@+id/search_banner"
             android:layout_width="0dp"
             android:layout_height="@dimen/_130sdp"
-            android:src="@drawable/banner2"
+            android:src="@drawable/banner"
             android:scaleType="fitCenter"
             android:layout_marginEnd="@dimen/_12sdp"
             app:layout_constraintTop_toBottomOf="@id/search_title"
