--- a/app/src/main/res/navigation/nav_my_tickets.xml
+++ b/app/src/main/res/navigation/nav_my_tickets.xml
@@ -11,12 +11,16 @@
         tools:layout="@layout/fragment_tickets" >
         <action
             android:id="@+id/action_navigation_tickets_to_navigation_user"
-            app:destination="@id/enterUserDialog" />
+            app:destination="@id/enterUserDialog"
+            app:popEnterAnim="@anim/slide_in_top"
+            app:popExitAnim="@anim/slide_out_bottom"
+            app:enterAnim="@anim/slide_in_bottom"
+            app:exitAnim="@anim/slide_out_top"/>
     </fragment>
 
-    <dialog
+    <fragment
         android:id="@+id/enterUserDialog"
-        android:name="kz.busjol.ui.enter_user.EnterUserDialog"
-        tools:layout="@layout/dialog_enter_user"/>
+        android:name="kz.busjol.ui.login_user.LoginUserFragment"
+        tools:layout="@layout/fragment_login_user"/>
 
 </navigation>
