--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -8,13 +8,14 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/close_button"
-        android:layout_width="@dimen/_10sdp"
-        android:layout_height="@dimen/_10sdp"
-        android:src="@drawable/ic_cross"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_17sdp"
-        android:layout_marginTop="@dimen/_17sdp"/>
+        android:layout_marginTop="@dimen/_17sdp"
+        android:src="@drawable/ic_back_button_cross"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView2"
@@ -57,16 +58,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/enter_user_text"
+        android:textColor="#8B98A7"
         android:layout_marginEnd="@dimen/_17sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/enter_user_subtitle"
         android:layout_marginStart="@dimen/_17sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:textSize="@dimen/_13sdp"/>
+        android:textSize="@dimen/_12sdp"/>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_layout"
+    <kz.busjol.ui.custom_views.CustomEditText
+        android:id="@+id/email_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/enter_user_text"
@@ -74,56 +76,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_17sdp"
         android:layout_marginEnd="@dimen/_17sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        app:endIconMode="clear_text"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="@string/email">
+        android:layout_marginTop="@dimen/_10sdp"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email_et"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
-            android:inputType="textEmailAddress"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_layout"
+    <kz.busjol.ui.custom_views.CustomEditText
+        android:id="@+id/password_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/email_layout"
+        app:layout_constraintTop_toBottomOf="@id/email_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="@dimen/_17sdp"
         android:layout_marginEnd="@dimen/_17sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        app:endIconMode="password_toggle"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:hint="@string/password">
+        android:layout_marginTop="@dimen/_5sdp"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_et"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
-            android:inputType="textPassword"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
+    <kz.busjol.ui.custom_views.CustomLoadingButton
         android:id="@+id/continue_button"
-        android:layout_width="@dimen/_270sdp"
+        android:layout_width="0dp"
         android:layout_height="@dimen/_40sdp"
         android:background="@drawable/ic_button_layout"
-        android:text="@string/enter_button"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
+        android:alpha="0.7"
         android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_17sdp"
+        android:layout_marginEnd="@dimen/_17sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/password_et" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/forgot_password_button"
@@ -131,6 +111,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/continue_button"
         app:layout_constraintTop_toBottomOf="@id/continue_button"
+        android:alpha="0.7"
         android:layout_marginTop="@dimen/_15sdp"
         android:text="@string/forgot_password"
         android:textColor="@color/blue_text"/>
@@ -141,6 +122,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/continue_button"
         app:layout_constraintTop_toBottomOf="@id/continue_button"
+        android:alpha="0.7"
         android:layout_marginTop="@dimen/_15sdp"
         android:text="@string/regisration"
         android:textColor="@color/blue_text"/>
