--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/separator1"
         android:layout_marginTop="@dimen/_13sdp"
-        android:textSize="@dimen/_12sdp"/>
+        android:textSize="@dimen/_11sdp"/>
 
     <kz.busjol.ui.custom_views.CustomEditText
         android:id="@+id/email_et"
@@ -61,6 +61,7 @@
         android:layout_marginTop="@dimen/_10sdp"/>
 
     <kz.busjol.ui.custom_views.CustomLoadingButton
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/email_et"
