--- a/app/src/main/res/layout/item_driver_schedule.xml
+++ b/app/src/main/res/layout/item_driver_schedule.xml
@@ -19,7 +19,7 @@
             android:id="@+id/schedule_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_10sdp"
+            android:textSize="@dimen/_9sdp"
             android:layout_marginTop="@dimen/_9sdp"
             android:layout_marginStart="@dimen/_13sdp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,8 @@
             android:id="@+id/schedule_seats_filled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_13sdp"
+            android:textSize="@dimen/_12sdp"
+            android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintStart_toStartOf="@+id/schedule_route"
             app:layout_constraintTop_toBottomOf="@+id/schedule_route"
             tools:text="Заполнено: 0 из 20" />
