--- a/app/src/main/res/layout/custom_loading_button.xml
+++ b/app/src/main/res/layout/custom_loading_button.xml
@@ -31,6 +31,7 @@
         app:indicatorColor="@color/blue_button"
         android:progressTint="@color/blue_button"
         android:progressBackgroundTint="@color/blue_button"
+        app:trackThickness="@dimen/_2sdp"
         android:translationZ="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
