--- a/app/src/main/res/layout/dialog_city_selector.xml
+++ b/app/src/main/res/layout/dialog_city_selector.xml
@@ -37,6 +37,7 @@
             android:id="@+id/find_city_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:maxLines="1"
             android:shadowColor="@color/green_background"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -82,6 +83,7 @@
         app:indicatorColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:trackThickness="@dimen/_2sdp"
         android:visibility="gone"
         android:indeterminate="true"
         app:layout_constraintTop_toTopOf="parent"
