--- a/app/src/main/res/layout/fragment_driver_scanner.xml
+++ b/app/src/main/res/layout/fragment_driver_scanner.xml
@@ -1,9 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="@dimen/_60sdp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/back_button"
+            android:layout_width="@dimen/_29sdp"
+            android:layout_height="@dimen/_29sdp"
+            android:src="@drawable/ic_button_back"
+            app:layout_constraintTop_toTopOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="@id/toolbar"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginStart="@dimen/_19sdp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title_trip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_scan"
+            app:layout_constraintStart_toEndOf="@id/back_button"
+            app:layout_constraintTop_toTopOf="@id/back_button"
+            app:layout_constraintBottom_toBottomOf="@id/back_button"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/bolder_text"
+            android:textStyle="bold"/>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <com.budiyev.android.codescanner.CodeScannerView
         android:id="@+id/scanner_view"
@@ -11,30 +44,32 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:frameColor="@color/main_color"
         app:frameCornersSize="@dimen/_45sdp"
         app:frameCornersRadius="0dp"
         app:frameAspectRatioWidth="1"
         app:frameAspectRatioHeight="1"
         app:autoFocusButtonVisible="false"
+        app:flashButtonVisible="false"
         app:frameSize="0.75"
-        app:frameThickness="@dimen/_1sdp"
+        app:frameThickness="@dimen/_4sdp"
         app:maskColor="#77000000"/>
 
     <View
         android:id="@+id/view8"
         android:layout_width="0.1dp"
         android:layout_height="0.1dp"
-        android:layout_marginTop="@dimen/_150sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="@dimen/_60sdp"
+        app:layout_constraintBottom_toBottomOf="@id/scanner_view"
+        app:layout_constraintEnd_toEndOf="@id/scanner_view"
+        app:layout_constraintStart_toStartOf="@id/scanner_view"
+        app:layout_constraintTop_toTopOf="@id/scanner_view" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.8"
+        android:alpha="0.9"
         android:gravity="center"
         android:text="@string/qr_camera_scan"
         android:textSize="@dimen/_11sdp"
@@ -43,5 +78,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view8" />
+
+    <View
+        android:id="@+id/loader_background"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="@id/scanner_view"
+        app:layout_constraintBottom_toBottomOf="@id/scanner_view"
+        android:background="@color/black"
+        android:visibility="gone"
+        android:alpha="0.4"/>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loader"
+        app:trackColor="@color/blue_button"
+        app:indicatorColor="@color/white"
+        app:trackThickness="@dimen/_2sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/scanner_view"
+        app:layout_constraintStart_toStartOf="@id/scanner_view"
+        app:layout_constraintEnd_toEndOf="@id/scanner_view"
+        app:layout_constraintBottom_toBottomOf="@id/scanner_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
