--- a/app/src/main/res/layout/dialog_change_language.xml
+++ b/app/src/main/res/layout/dialog_change_language.xml
@@ -104,7 +104,7 @@
         android:id="@+id/kazakh_language_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_selector"
+        android:src="@drawable/ic_selector_selected"
         app:layout_constraintTop_toBottomOf="@id/separator_one"
         app:layout_constraintBottom_toTopOf="@id/separator_two"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +115,7 @@
         android:id="@+id/russian_language_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_selector"
+        android:src="@drawable/ic_selector_selected"
         app:layout_constraintTop_toBottomOf="@id/separator_two"
         app:layout_constraintBottom_toTopOf="@id/separator_three"
         app:layout_constraintEnd_toEndOf="parent"
