--- a/app/src/main/res/layout/fragment_payment_order.xml
+++ b/app/src/main/res/layout/fragment_payment_order.xml
@@ -2,39 +2,50 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/back_button"
-        android:layout_width="@dimen/_29sdp"
-        android:layout_height="@dimen/_29sdp"
-        android:src="@drawable/ic_button_back"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="@dimen/_60sdp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/_12sdp"
-        android:layout_marginStart="@dimen/_12sdp"/>
+        app:layout_constraintStart_toStartOf="parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/title_payment_order"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/back_button"
+            android:layout_width="@dimen/_29sdp"
+            android:layout_height="@dimen/_29sdp"
+            android:src="@drawable/ic_button_back"
+            app:layout_constraintTop_toTopOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="@id/toolbar"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginStart="@dimen/_19sdp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Оплата заказа"
+            app:layout_constraintStart_toEndOf="@id/back_button"
+            app:layout_constraintTop_toTopOf="@id/back_button"
+            app:layout_constraintBottom_toBottomOf="@id/back_button"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/bolder_text"
+            android:textStyle="bold"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <kz.busjol.ui.custom_views.CustomLoadingButton
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_order_payment"
-        app:layout_constraintStart_toEndOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="@id/back_button"
-        app:layout_constraintBottom_toBottomOf="@id/back_button"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:textSize="@dimen/_16sdp"
-        android:textColor="@color/bolder_text"
-        android:textStyle="bold"/>
-
-    <WebView
-        android:id="@+id/payment_order_web_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/_13sdp"
-        app:layout_constraintTop_toBottomOf="@id/title_payment_order"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
