--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -39,15 +39,39 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text_booking_expires_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/booking_expires"
+        android:textSize="@dimen/_13sdp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="@dimen/_12sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/booking_expires_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/_13sdp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_13sdp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/text_booking_expires_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_booking_expires_title"
+        tools:text="10:00" />
+
     <View
         android:id="@+id/booking_details_layout"
         android:layout_width="@dimen/_290sdp"
         android:layout_height="@dimen/_95sdp"
-        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginTop="@dimen/_12sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/ic_frame_trip"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/text_booking_expires_title" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/booking_trip_number"
@@ -74,6 +98,7 @@
         android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/booking_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_9sdp"
@@ -107,125 +132,15 @@
         app:layout_constraintEnd_toEndOf="@+id/booking_details_layout"
         app:layout_constraintTop_toTopOf="@+id/route_cities" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_booking_expires_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/booking_expires"
-        android:textSize="@dimen/_12sdp"
-        android:layout_marginStart="15dp"
-        android:textColor="@color/black"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/booking_details_layout" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/booking_expires_timer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/text_booking_expires_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_booking_expires_title"
-        tools:text="10:00" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_pay_with_card"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/card_frame"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/booking_details_layout"
         app:layout_constraintStart_toStartOf="parent"
-        android:paddingBottom="12dp"
-        app:layout_constraintTop_toBottomOf="@id/text_booking_expires_title">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appCompatImageView"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:src="@drawable/ic_card_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/booking_card_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/with_bank_cards"
-            android:textColor="@color/bolder_text"
-            android:textSize="@dimen/_12sdp"
-            android:paddingBottom="@dimen/_9sdp"
-            app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
-            app:layout_constraintTop_toBottomOf="@id/appCompatImageView" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_pay_with_card"
-            android:layout_width="@dimen/_270sdp"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginHorizontal="16dp"
-            android:background="@drawable/ic_button_layout"
-            android:text="@string/proceed_to_checkout_button"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/booking_card_title" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_pay_with_kaspi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/card_frame"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingBottom="12dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_pay_with_card">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/appCompatImageView2"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:src="@drawable/kaspi_logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/booking_kaspi_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/kaspi"
-            android:textColor="@color/bolder_text"
-            android:textSize="@dimen/_12sdp"
-            android:paddingBottom="@dimen/_9sdp"
-            app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
-            app:layout_constraintTop_toBottomOf="@id/appCompatImageView2" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_pay_with_kaspi"
-            android:layout_width="@dimen/_270sdp"
-            android:layout_height="@dimen/_35sdp"
-            android:layout_marginHorizontal="16dp"
-            android:background="@drawable/ic_button_layout"
-            android:text="@string/proceed_to_checkout_button"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/booking_kaspi_title" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:nestedScrollingEnabled="true"
+        tools:listitem="@layout/item_payment"
+        android:layout_marginTop="@dimen/_12sdp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
