--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -63,80 +63,92 @@
         app:layout_constraintTop_toTopOf="@+id/text_booking_expires_title"
         tools:text="10:00" />
 
-    <View
-        android:id="@+id/booking_details_layout"
-        android:layout_width="@dimen/_290sdp"
-        android:layout_height="@dimen/_95sdp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/booking_details_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12dp"
         android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:layout_marginStart="@dimen/_12sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/ic_frame_trip"
-        app:layout_constraintTop_toBottomOf="@id/text_booking_expires_title" />
+        app:layout_constraintTop_toBottomOf="@id/text_booking_expires_title">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/booking_trip_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_9sdp"
-        tools:text="Рейс №23"
-        app:layout_constraintTop_toTopOf="@id/booking_details_layout"
-        app:layout_constraintStart_toStartOf="@id/booking_details_layout"
-        android:layout_marginTop="@dimen/_9sdp"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:textColor="@color/black"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/booking_details_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/route_cities"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_2sdp"
-        android:textColor="@color/bolder_text"
-        android:textSize="@dimen/_13sdp"
-        app:layout_constraintStart_toStartOf="@+id/booking_trip_number"
-        app:layout_constraintTop_toBottomOf="@id/booking_trip_number"
-        tools:text="Алматы - Нурсултан"
-        android:textStyle="bold" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/booking_trip_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_9sdp"
+                tools:text="Рейс №23"
+                app:layout_constraintTop_toTopOf="@id/booking_details_layout"
+                app:layout_constraintStart_toStartOf="@id/booking_details_layout"
+                android:layout_marginTop="@dimen/_9sdp"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:textColor="@color/black"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/booking_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_9sdp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="@+id/route_cities"
-        app:layout_constraintTop_toBottomOf="@id/route_cities"
-        tools:text="24.02.2022 09:00" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/route_cities"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textColor="@color/bolder_text"
+                android:textSize="@dimen/_13sdp"
+                app:layout_constraintStart_toStartOf="@+id/booking_trip_number"
+                app:layout_constraintTop_toBottomOf="@id/booking_trip_number"
+                tools:text="Алматы - Нурсултан"
+                android:textStyle="bold" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/booking_amount"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_30sdp"
-        app:layout_constraintStart_toStartOf="@id/booking_details_layout"
-        app:layout_constraintEnd_toEndOf="@id/booking_details_layout"
-        app:layout_constraintBottom_toBottomOf="@id/booking_details_layout"
-        android:background="@drawable/ic_blue_bottom_layout"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:textSize="@dimen/_13sdp"
-        tools:text="10 000 〒"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/booking_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_9sdp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintStart_toStartOf="@+id/route_cities"
+                app:layout_constraintTop_toBottomOf="@id/route_cities"
+                tools:text="24.02.2022 09:00" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/button_booking_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/details"
-        android:textColor="@color/blue_text"
-        android:textSize="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        app:layout_constraintBottom_toBottomOf="@+id/route_cities"
-        app:layout_constraintEnd_toEndOf="@+id/booking_details_layout"
-        app:layout_constraintTop_toTopOf="@+id/route_cities" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/booking_amount"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                app:layout_constraintStart_toStartOf="@id/booking_details_layout"
+                app:layout_constraintEnd_toEndOf="@id/booking_details_layout"
+               app:layout_constraintTop_toBottomOf="@id/booking_date"
+                android:background="@drawable/ic_blue_bottom_layout"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:textSize="@dimen/_13sdp"
+                tools:text="10 000 〒"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/button_booking_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/details"
+                android:textColor="@color/blue_text"
+                android:textSize="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                app:layout_constraintBottom_toBottomOf="@+id/route_cities"
+                app:layout_constraintEnd_toEndOf="@+id/booking_details_layout"
+                app:layout_constraintTop_toTopOf="@+id/route_cities" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/booking_details_layout"
+        app:layout_constraintTop_toBottomOf="@id/booking_details_card"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:nestedScrollingEnabled="true"
