--- a/app/src/main/res/layout/fragment_passenger_data.xml
+++ b/app/src/main/res/layout/fragment_passenger_data.xml
@@ -49,83 +49,181 @@
 
             </androidx.appcompat.widget.Toolbar>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/trip_layout"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_76sdp"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                android:layout_marginTop="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
-                android:background="@drawable/ic_details_layout"
+                android:layout_marginStart="@dimen/_12sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/trip_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/trip_number"
-                    android:textSize="@dimen/_9sdp"
-                    app:layout_constraintTop_toTopOf="@id/trip_layout"
-                    app:layout_constraintStart_toStartOf="@id/trip_layout"
-                    android:layout_marginStart="@dimen/_12sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:textColor="@color/black"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/booking_details_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/trip_destination"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_1sdp"
-                    android:textColor="@color/bolder_text"
-                    android:textSize="@dimen/_13sdp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@id/trip_details_button"
-                    app:layout_constraintStart_toStartOf="@+id/trip_number"
-                    app:layout_constraintTop_toTopOf="@id/trip_details_button"
-                    tools:text="Алматы - НурСултан" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/trip_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_9sdp"
+                        tools:text="Рейс №23"
+                        app:layout_constraintTop_toTopOf="@id/booking_details_layout"
+                        app:layout_constraintStart_toStartOf="@id/booking_details_layout"
+                        android:layout_marginTop="@dimen/_9sdp"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:textColor="@color/black"/>
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/trip_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:textSize="@dimen/_9sdp"
-                    app:layout_constraintStart_toStartOf="@+id/trip_destination"
-                    app:layout_constraintTop_toBottomOf="@id/trip_destination"
-                    tools:text="24.12.2021" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/trip_destination"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:textColor="@color/bolder_text"
+                        android:textSize="@dimen/_13sdp"
+                        app:layout_constraintStart_toStartOf="@+id/trip_number"
+                        app:layout_constraintTop_toBottomOf="@id/trip_number"
+                        tools:text="Алматы - Астана"
+                        android:textStyle="bold" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/trip_start_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/_9sdp"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    app:layout_constraintStart_toEndOf="@+id/trip_date"
-                    app:layout_constraintTop_toTopOf="@+id/trip_date"
-                    tools:text="09:00" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/trip_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_9sdp"
+                        android:layout_marginTop="4dp"
+                        app:layout_constraintStart_toStartOf="@id/trip_destination"
+                        app:layout_constraintTop_toBottomOf="@id/trip_destination"
+                        android:paddingBottom="@dimen/_8sdp"
+                        tools:text="24.02.2022 09:00" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/trip_details_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_24sdp"
-                    android:text="@string/details"
-                    android:textColor="@color/blue_text"
-                    android:textSize="@dimen/_10sdp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/trip_details_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/details"
+                        android:textColor="@color/blue_text"
+                        android:textSize="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_12sdp"
+                        app:layout_constraintBottom_toBottomOf="@+id/trip_destination"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/trip_destination" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/passengers_list"
+                android:id="@+id/rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/trip_layout"
-                tools:listitem="@layout/custom_form" />
+                tools:listitem="@layout/custom_form"
+               tools:itemCount="1"/>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/contact_information_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                app:layout_constraintTop_toBottomOf="@id/rv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_12sdp">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_9sdp"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:textSize="@dimen/_13sdp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:text="@string/contacts_info_title"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@id/passenger_number_text"
+                        app:layout_constraintBottom_toBottomOf="@id/passenger_number_text"
+                        android:layout_marginTop="@dimen/_9sdp"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:textSize="@dimen/_9sdp"
+                        android:text="@string/contacts_info_description"/>
+
+                    <kz.busjol.ui.custom_views.CustomEditText
+                        android:id="@+id/et_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:layout_marginEnd="@dimen/_12sdp"
+                        android:layout_marginTop="@dimen/_9sdp"/>
+
+                    <kz.busjol.ui.custom_views.CustomEditText
+                        android:id="@+id/et_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:layout_marginEnd="@dimen/_12sdp"
+                        android:layout_marginTop="@dimen/_9sdp"
+                        android:paddingBottom="@dimen/_9sdp"/>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/rules_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                app:layout_constraintTop_toBottomOf="@id/contact_information_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_12sdp">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_9sdp"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:textSize="@dimen/_13sdp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:text="@string/rules_title"/>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/passenger_type_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@id/passenger_number_text"
+                        app:layout_constraintBottom_toBottomOf="@id/passenger_number_text"
+                        android:layout_marginTop="@dimen/_9sdp"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:textSize="@dimen/_9sdp"
+                        android:text="@string/read_the_rules"/>
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </com.google.android.material.card.MaterialCardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
