--- a/app/src/main/res/layout/fragment_passenger_data.xml
+++ b/app/src/main/res/layout/fragment_passenger_data.xml
@@ -191,9 +191,11 @@
                 app:layout_constraintTop_toBottomOf="@id/contact_information_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_12sdp">
+                android:layout_marginTop="@dimen/_12sdp"
+                android:layout_marginBottom="@dimen/_100sdp">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
@@ -220,6 +222,27 @@
                         android:layout_marginStart="@dimen/_12sdp"
                         android:textSize="@dimen/_9sdp"
                         android:text="@string/read_the_rules"/>
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="@dimen/_5sdp">
+
+                        <com.google.android.material.checkbox.MaterialCheckBox
+                            android:id="@+id/checkbox"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_7sdp"/>
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_1sdp"
+                            android:text="@string/accept_the_rules"
+                            android:textSize="@dimen/_9sdp"/>
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
