--- a/app/src/main/res/layout/dialog_trip_details.xml
+++ b/app/src/main/res/layout/dialog_trip_details.xml
@@ -44,6 +44,7 @@
         tools:text="Алматы - Нур-Султан"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
         app:layout_constraintTop_toBottomOf="@id/separator_line"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/_10sdp"
@@ -53,7 +54,7 @@
         android:id="@+id/trip_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_9sdp"
+        android:textSize="@dimen/_12sdp"
         android:textColor="#8B98A7"
         app:layout_constraintStart_toStartOf="@+id/trip_cities_tv"
         app:layout_constraintTop_toBottomOf="@+id/trip_cities_tv"
@@ -64,7 +65,7 @@
         android:id="@+id/trip_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_9sdp"
+        android:textSize="@dimen/_12sdp"
         android:textColor="#8B98A7"
         app:layout_constraintStart_toStartOf="@+id/trip_time"
         app:layout_constraintTop_toBottomOf="@+id/trip_time"
@@ -78,7 +79,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginTop="@dimen/_2sdp"
-        android:textSize="@dimen/_10sdp"
+        android:textSize="@dimen/_13sdp"
         app:layout_constraintStart_toStartOf="@+id/trip_number"
         app:layout_constraintTop_toBottomOf="@+id/trip_number"
         tools:text="Перевозчик: Автовокзал Алматы" />
@@ -89,7 +90,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_14sdp"
         android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="@+id/trip_ferrymen"
         app:layout_constraintTop_toBottomOf="@+id/trip_ferrymen"
@@ -99,7 +100,7 @@
         android:id="@+id/trip_date_from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_8sdp"
+        android:textSize="@dimen/_10sdp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/trip_time_from_city"
         app:layout_constraintStart_toStartOf="@+id/trip_time_from_city"
@@ -108,8 +109,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/appCompatImageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_15sdp"
         android:src="@drawable/ic_from_city"
         app:layout_constraintStart_toEndOf="@+id/trip_time_from_city"
@@ -127,8 +128,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/appCompatImageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_1sdp"
         android:src="@drawable/ic_to_city"
         app:layout_constraintEnd_toEndOf="@+id/view9"
@@ -140,7 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_14sdp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/trip_time_from_city"
         app:layout_constraintTop_toBottomOf="@+id/view9"
@@ -150,7 +151,7 @@
         android:id="@+id/trip_date_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/_8sdp"
+        android:textSize="@dimen/_10sdp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/trip_time_to_city"
         app:layout_constraintStart_toStartOf="@+id/trip_time_to_city"
@@ -164,6 +165,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:textSize="@dimen/_13sdp"
         android:layout_marginStart="@dimen/_15sdp"
         app:layout_constraintStart_toEndOf="@+id/appCompatImageView6"
         app:layout_constraintTop_toTopOf="@+id/appCompatImageView6"
@@ -176,6 +178,7 @@
         android:textAllCaps="true"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:textSize="@dimen/_13sdp"
         android:layout_marginStart="@dimen/_15sdp"
         app:layout_constraintStart_toEndOf="@+id/appCompatImageView7"
         app:layout_constraintTop_toBottomOf="@+id/view9"
