--- a/app/src/main/res/layout/fragment_bus_plan.xml
+++ b/app/src/main/res/layout/fragment_bus_plan.xml
@@ -171,9 +171,9 @@
             android:gravity="end"
             android:textColor="@color/bolder_text"
             android:textStyle="bold"
-            android:lines="1"
-            android:ellipsize="end"
             android:maxLines="1"
+            android:ellipsize="end"
+            android:scrollHorizontally="true"
             app:layout_constraintBottom_toBottomOf="@+id/text_selected_seats_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/text_selected_seats_title"
