--- a/app/src/main/res/layout/item_payment.xml
+++ b/app/src/main/res/layout/item_payment.xml
@@ -49,15 +49,15 @@
             android:layout_height="12dp"
             app:layout_constraintTop_toBottomOf="@id/button"/>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/selector_image"
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="false"
             android:src="@drawable/ic_selector_selected"
             app:layout_constraintTop_toTopOf="@+id/image"
             app:layout_constraintBottom_toBottomOf="@+id/image"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/_20sdp"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <View
             android:id="@+id/click_area"
